# duckstation

./: CMakeLists.txt  duckstation.sln
dep/libgo2/: CMakeLists.txt  README.md
dep/xxhash/: CMakeLists.txt
src/: CMakeLists.txt
src/common/: CMakeLists.txt  bitfield.h  cd_image.cpp  common.vcxproj  common.vcxproj.filters  file_system.cpp  memory_arena.cpp  memory_arena.h  page_fault_handler.cpp  rectangle.h  string_util.h
src/core/: CMakeLists.txt  bus.cpp  bus.h  cdrom.cpp  cdrom.h  controller.cpp  core.vcxproj  core.vcxproj.filters  cpu_code_cache.cpp  cpu_code_cache.h  cpu_core.cpp  cpu_core.h  cpu_core_private.h  cpu_recompiler_code_generator.cpp  cpu_recompiler_code_generator.h  cpu_recompiler_code_generator_aarch64.cpp  cpu_recompiler_code_generator_generic.cpp  cpu_recompiler_code_generator_x64.cpp  cpu_recompiler_register_cache.cpp  cpu_recompiler_register_cache.h  cpu_recompiler_thunks.cpp  cpu_recompiler_thunks.h  cpu_recompiler_types.h  cpu_types.cpp  cpu_types.h  dma.cpp  gpu.cpp  gpu.h  gpu_backend.cpp  gpu_backend.h  gpu_commands.cpp  gpu_hw.cpp  gpu_hw.h  gpu_hw_d3d11.cpp  gpu_hw_d3d11.h  gpu_hw_opengl.cpp  gpu_hw_opengl.h  gpu_hw_shadergen.cpp  gpu_hw_shadergen.h  gpu_hw_vulkan.cpp  (+24 more)
src/duckstation-go2/: CMakeLists.txt  go2_controller_interface.cpp  go2_controller_interface.h  go2_host_display.cpp  go2_host_display.h  go2_host_interface.cpp  go2_host_interface.h  main.cpp
src/duckstation-oga/: CMakeLists.txt  main.cpp  oga_host_display.cpp  oga_host_display.h  oga_host_interface.cpp  oga_host_interface.h
src/duckstation-qt/: CMakeLists.txt  duckstation-qt.vcxproj  duckstation-qt.vcxproj.filters  gamelistmodel.cpp  gamelistmodel.h  gamelistwidget.cpp  gamelistwidget.h  mainwindow.cpp  mainwindow.h  mainwindow.ui  qthostinterface.cpp
(+25 files in other folders)
